# neural-networks

./: .gitignore  README.md  pyproject.toml
src/: create_data.py  data.csv  index.py  main.py
src/dos_a_dos/: create_data.py  create_model.py  data.csv  load_model.py  model.keras  scaler.pkl
src/dos_a_uno/: create_data.py  create_model.py  data.csv  load_model.py  model.keras  scaler.pkl
src/tres_a_tres/: create_data.py  create_model.py  data.csv  load_model.py  model.keras  scaler.pkl
