[project]
name = 'neural-networks'
version = '0.1.0'
description = 'Neural networks project'
readme = 'README.md'
requires-python = '==3.13.*'
dependencies = [
    "graphviz>=0.21",
    'matplotlib>=3.10.9',
    'numpy>=2.2.6',
    "pandas>=3.0.2",
    'tensorflow>=2.21.0',
]

[dependency-groups]
dev = [
    'ruff>=0.15.12',
    'taskipy>=1.14.1',
]

[tool.ruff]
line-length = 88
target-version = 'py313'

[tool.ruff.lint]
select = [
    'E',   # pycodestyle
    'F',   # pyflakes
    'I',   # imports
    'B',   # bugbear
    'UP',  # pyupgrade
    'SIM', # simplifications
    'C4',  # comprehensions
    'PIE', # misc errors
]
ignore = [
    'E501', # handled by formatter
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'auto'

[tool.taskipy.tasks]
create_data = "uv run python -m src.create_data"
start = "uv run python -m src.index"
lint = "ruff check ."
"lint:fix" = "ruff check . --fix && ruff format ."